--- a/Typescript/package.json
+++ b/Typescript/package.json
@@ -4,6 +4,7 @@
     "version": "1.0.0",
     "main": "",
     "scripts": {
+        "tsc": "tsc",
         "start": "tsc app.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
