--- a/9- Webpack with Ts loader/tsconfig.json
+++ b/9- Webpack with Ts loader/tsconfig.json
@@ -3,6 +3,7 @@
         "outDir": "./built",
         "noImplicitAny": true,
         "allowJs": true,
+        "sourceMap": true,
         "target": "es5", // 'es3', 'es5', 'es6', 'es2015', 'es2016', 'es2017', 'es2018' or 'esnext'.
         "module": "es6", // "commonjs", "amd", "umd", "system", "es6", "es2015", "esnext", "none"
         "lib": [ "es2015", "dom" ], // "es5", "es6", "es2015", "es7", "es2016", "es2017", "es2018", "esnext", "dom" ...
