--- a/10- Rollup/package.json
+++ b/10- Rollup/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rollup -c"
+    "start": "rollup -c",
+    "clean": "rimraf dist/*.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "rollup": "^1.28.0"
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.28.0",
+    "rollup-plugin-babel": "^4.3.3"
   }
 }
