--- a/10- Rollup/package.json
+++ b/10- Rollup/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "rollup -c",
+    "start": "npm run clean && rollup -c",
     "clean": "rimraf dist/*.js"
   },
   "author": "",
@@ -12,8 +12,11 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "lodash": "^4.17.15",
     "rimraf": "^3.0.0",
     "rollup": "^1.28.0",
-    "rollup-plugin-babel": "^4.3.3"
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   }
 }
