--- a/10- Rollup/package.json
+++ b/10- Rollup/package.json
@@ -9,10 +9,13 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "lit-element": "^2.2.1",
+    "lodash": "^4.17.15"
+  },
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
-    "lodash": "^4.17.15",
     "rimraf": "^3.0.0",
     "rollup": "^1.28.0",
     "rollup-plugin-babel": "^4.3.3",
